--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" property="og:title" content="GameKnight" />
+  <meta property="og:type" content="_" />
+  <meta name="image" property="og:image" content="https:/gameknight.ryangriego.com/images/gameknight-thumbnail.jpg" />
+  <meta name="description" property="og:description" content="GameKnight" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Game Knight</title>
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
