Testing image for linkedin featured image

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,10 +7,8 @@
   <meta name="title" property="og:title" content="GameKnight" />
   <meta property="og:type" content="_" />
   <meta name="image" property="og:image" content="https:/gameknight.ryangriego.com/images/gameknight-thumbnail.jpg" />
-  <meta name="description" property="og:description" content="GameKnight" />
+  <meta name="description" property="og:description" content="Shopping Cart App" />
   <meta property='og:title' content='GameKnight' />
-  <meta property='og:image' content='https:/gameknight.ryangriego.com/images/gameknight-thumbnail.jpg' />
-  <meta property='og:description' content='Shopping Cart App' />
   <meta property='og:url' content='//gameknight.ryangriego.com' />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Game Knight</title>
