--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,9 +7,9 @@
   <meta name="title" property="og:title" content="GameKnight" />
   <meta property="og:type" content="_" />
   <meta name="image" property="og:image" content="https:/gameknight.ryangriego.com/images/gameknight-thumbnail.jpg" />
+  <meta name="author" content="Ryan Griego">
   <meta name="description" property="og:description" content="Shopping Cart App" />
   <meta property='og:title' content='GameKnight' />
-  <meta property='og:url' content='//gameknight.ryangriego.com' />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Game Knight</title>
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
