--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,15 @@
   <meta name="description" property="og:description" content="Shopping Cart App" />
   <meta property='og:title' content='GameKnight' />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47059061-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-47059061-2');
+  </script>
   <title>Game Knight</title>
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
