--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" property="og:title" content="GameKnight" />
+  <meta name="description" content="GameKnight" />
+  <meta name="title" property="og:title" content="GameKnight - Shopping Cart App" />
   <meta property="og:type" content="_" />
-  <meta name="image" property="og:image" content="https:/gameknight.ryangriego.com/images/gameknight-thumbnail.jpg" />
-  <meta name="author" content="Ryan Griego">
-  <meta name="description" property="og:description" content="Shopping Cart App" />
-  <meta property='og:title' content='GameKnight' />
+  <meta name="image" property="og:image" content="http://gameknight.ryangriego.com/images/gameknight-thumbnail.jpg" />
+  <meta name="description" property="og:description" content="GameKnight" />
+  <meta name="author" content="Ryan Griego" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47059061-2"></script>
